<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/ciudadesFragment">

    <fragment
        android:id="@+id/ciudadesFragment"
        android:name="com.climaApp.clima.ciudades.CiudadesFragment"
        android:label="@string/fc_title"
        tools:layout="@layout/fragment_ciudades">
        <action
            android:id="@+id/action_ciudadesFragment_to_newCiudadFragment"
            app:destination="@id/newCiudadFragment" />
        <action
            android:id="@+id/action_ciudadesFragment_to_detalleFragment"
            app:destination="@id/detalleFragment" />
    </fragment>
    <fragment
        android:id="@+id/newCiudadFragment"
        android:name="com.climaApp.clima.newCiudad.NewCiudadFragment"
        android:label="@string/fn_title"
        tools:layout="@layout/fragment_new_ciudad">
        <action
            android:id="@+id/action_newCiudadFragment_to_ciudadesFragment"
            app:destination="@id/ciudadesFragment" />
    </fragment>
    <fragment
        android:id="@+id/detalleFragment"
        android:name="com.climaApp.clima.detalle.DetalleFragment"
        android:label="@string/fd_title"
        tools:layout="@layout/fragment_detalle">
        <action
            android:id="@+id/action_detalleFragment_to_ciudadesFragment"
            app:destination="@id/ciudadesFragment" />
        <argument
            android:name="ciudad"
            app:argType="com.climaApp.clima.database.Ciudad" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.climaApp.clima.about.AboutFragment"
        android:label="@string/fa_title"
        tools:layout="@layout/fragment_about" />
</navigation>